--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -6,11 +6,19 @@
         <app-menu></app-menu>
         </div>
         
-    <div class="item board">
-<app-board></app-board>
+        <div class="item info">
+ 
+
+
+
+<div class=" item board">
+    <app-board></app-board>
+    </div>
+
+    <div class="item charts">
+        <app-charts></app-charts>
+        </div>
+        
 </div>
-
-
-<app-charts></app-charts>
 </div>
 
