--- a/front-end/src/app/components/task/charts/charts.component.html
+++ b/front-end/src/app/components/task/charts/charts.component.html
@@ -1,2 +1,15 @@
 
-<app-priority-chart></app-priority-chart>
+
+
+<div class="charts">
+    <div class="priorityCharts"> <app-priority-chart></app-priority-chart></div>
+    <div class="priorityCharts">
+    <app-donut-chart></app-donut-chart>
+</div>
+    <div class="priorityCharts">
+    <app-user-summary></app-user-summary>
+</div>
+
+
+    </div>
+
