--- a/front-end/src/app/components/landing/signup/signup.component.html
+++ b/front-end/src/app/components/landing/signup/signup.component.html
@@ -7,6 +7,8 @@
         <span *ngIf="nuid.errors?.['required']">*Required.</span>
         <span *ngIf="nuid.errors?.['maxlength']">Should be 10 characters long.</span>
         <span *ngIf="nuid.errors?.['minlength']">Should be 10 characters long.</span>
+        <span *ngIf="firstName.errors?.['pattern']">Only digits are allowed.</span>
+
 
 
       </mat-error>
