final working code

--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -7,17 +7,11 @@
         </div>
         
         <div class="item info">
- 
 
 
 
 <div class=" item board">
-    <app-board></app-board>
-    </div>
-
-    <div class="item charts">
-        <app-charts></app-charts>
-        </div>
+    <router-outlet></router-outlet>
         
 </div>
 </div>
