--- a/front-end/src/app/components/task/charts/charts.component.html
+++ b/front-end/src/app/components/task/charts/charts.component.html
@@ -1,15 +1,11 @@
-
-
-
 <div class="charts">
-    <div class="priorityCharts"> <app-priority-chart></app-priority-chart></div>
-    <div class="priorityCharts">
-    <app-donut-chart></app-donut-chart>
-</div>
-    <div class="priorityCharts">
+    <div class="chart-row">
+  
     <app-user-summary></app-user-summary>
-</div>
 
-
+    <div class="chart-col" >
+        <app-donut-chart></app-donut-chart>
+        <app-priority-chart></app-priority-chart>
     </div>
-
+</div>
+</div>
