--- a/front-end/src/app/components/home/home.component.css
+++ b/front-end/src/app/components/home/home.component.css
@@ -26,7 +26,7 @@
 
 .board{
     flex: 0 0 auto;
-    width: 70%;
+    width: 90%;
 }
 
 .charts{
@@ -39,11 +39,13 @@
 
     .container{
         flex-direction: column;
-        
+        height: auto;
     }
 
     .item{
     width: 100%;
     }
+
+
 
 }
