--- a/front-end/src/app/components/menu/menu.component.css
+++ b/front-end/src/app/components/menu/menu.component.css
@@ -16,6 +16,13 @@
   color: white;
 }
 
+.link:hover{
+  background-color: var(--color-border-light);
+ 
+  border-radius: 1rem;
+}
+
+
 .project-name {
   margin-left: 0.5rem;
   font-size: larger;
@@ -30,11 +37,12 @@
 @media (max-width: 975px) {
     .sidebar {
       width: 100%;
-        height: fit-content
+        height: 100%
       }
 
       .sidebar.collapsed {
         width: 100%;
+        height: 2.5rem;
       }
   }
   
